[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.0.10"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
bs58 = "0.3.0"
clap = "2.33.0"
histogram = "*"
log = "0.4.8"
serde_json = "1.0.46"
serde_yaml = "0.8.11"
solana-clap-utils = { path = "../clap-utils", version = "1.0.10" }
solana-ledger = { path = "../ledger", version = "1.0.10" }
solana-logger = { path = "../logger", version = "1.0.10" }
solana-runtime = { path = "../runtime", version = "1.0.10" }
solana-sdk = { path = "../sdk", version = "1.0.10" }
solana-vote-program = { path = "../programs/vote", version = "1.0.10" }
solana-stake-program = { path = "../programs/stake", version = "1.0.10" }
solana-transaction-status = { path = "../transaction-status", version = "1.0.10" }
tempfile = "3.1.0"
bytecount = "0.6.0"
futures = "0.3.5"
futures-util = "0.3.5"
regex = "1"
solana-measure = { path = "../measure", version = "1.0.10" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "1.0.10" }
#solana-version = { path = "../version", version = "1.2.20" }
tokio = { version = "0.2.22", features = ["full"] }

[dev-dependencies]
assert_cmd = "0.12"
