[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-log-parser"
description = "Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = "2.33.1"
log = { version = "0.4.17" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
solana-logger = { path = "../logger", version = "=1.15.0" }
solana-version = { path = "../version", version = "=1.15.0" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
